------------------
Pylint's ChangeLog
------------------



What's New in Pylint 2.12.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.12.rst'



What's New in Pylint 2.11.1?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here



What's New in Pylint 2.11.0?
============================
Release date: 2021-09-16

* The python3 porting mode checker and it's ``py3k`` option were removed. You can still find it in older pylint
  versions.

* ``raising-bad-type`` is now properly emitted when  raising a string

* Added new extension ``SetMembershipChecker`` with ``use-set-for-membership`` check:
  Emitted when using an in-place defined ``list`` or ``tuple`` to do a membership test. ``sets`` are better optimized for that.

  Closes #4776


* Added ``py-version`` config key (if ``[MASTER]`` section). Used for version dependant checks.
  Will default to whatever Python version pylint is executed with.

* ``CodeStyleChecker``

  * Added ``consider-using-assignment-expr``: Emitted when an assignment is directly followed by an if statement
    and both can be combined by using an assignment expression ``:=``. Requires Python 3.8

    Closes #4862

* Added ``consider-using-f-string``: Emitted when .format() or '%' is being used to format a string.

  Closes #3592

* Fix false positive for ``consider-using-with`` if a context manager is assigned to a
  variable in different paths of control flow (e. g. if-else clause).

  Closes #4751

* https is now prefered in the documentation and http://pylint.pycqa.org correctly redirect to https://pylint.pycqa.org

  Closes #3802

* Fix false positive for ``function-redefined`` for simple type annotations

  Closes #4936

* Fix false positive for ``protected-access`` if a protected member is used in type hints of function definitions
