@@ -19,3 +19,7 @@ unspecified-encoding:65:0::Using open without explicitly specifying an encoding:
 unspecified-encoding:72:0::Using open without explicitly specifying an encoding:HIGH
 unspecified-encoding:73:0::Using open without explicitly specifying an encoding:HIGH
 unspecified-encoding:74:0::Using open without explicitly specifying an encoding:HIGH
+unspecified-encoding:78:0::Using open without explicitly specifying an encoding:HIGH
+unspecified-encoding:79:0::Using open without explicitly specifying an encoding:HIGH
+unspecified-encoding:80:0::Using open without explicitly specifying an encoding:HIGH
+unspecified-encoding:81:0::Using open without explicitly specifying an encoding:HIGH
